# CMakeTools

./: .gitmodules  CMTUtils.cmake  CMakeLists.txt  LICENSE  README.md  projectVersionDetails.cmake  todo.md
Examples/DemoLib/: CMakeLists.txt  README.md
Examples/DemoLib/doc/: CMakeLists.txt  Doxyfile.in
Examples/DemoLib/doc/data/: PlantUML.md
Examples/DemoLib/include/DemoLib/: Hello.h
Examples/DemoLib/src/: CMakeLists.txt  HelloImpl.cpp  HelloImpl.h  hello.cpp  helloimpl.cpp
Examples/DemoLib/test/: CMakeLists.txt  hello.cpp  test_hello.cpp  test_installfilesets.cmake  test_targetcreation.cmake
Examples/DemoLib/test/include/: fileset.h
Examples/foo/: CMakeLists.txt
Examples/foo/src/: CMakeLists.txt  foo.cpp
Examples/metabuild/: CMakeLists.txt
cmake/: BuildTypes.cmake  CoverageHelper.cmake  DoxygenHelper.cmake  ExternalBuild.cmake  InternalHelpers.cmake  PackagingHelper.cmake  ResourceDownloader.cmake  VersionHelper.cmake  cmt_packageconfig.cmake.in  coverage_config_updated.in  get_plantuml_jar_path.sh  utils.cmake  version.cpp.in  version.h.in
tests/: CMakeLists.txt  README.md  dummyexe.cpp  dummylib.cpp  test_cmt_add_target.cmake  test_cmt_utils_stack.cmake
tests/scripts/: checkExists.py
